k8s/monitoring/grafana.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: grafana
spec:
  tls:
  - secretName: grafana-tls
    hosts:
    - grafana.svc.kazoku.co
  rules:
  - host: grafana.svc.kazoku.co
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
