k8s/monitoring/kibana.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
  - port: 80
    targetPort: 5601
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: kibana
spec:
  tls:
  - secretName: kibana-tls
    hosts:
    - kibana.svc.kazoku.co
  rules:
  - host: kibana.svc.kazoku.co
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:5.5.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5601
        resources:
          requests:
            memory: 100Mi
            cpu: 10m
